/***********************************************************************
 X3 ChangeLog

2006-06-25  Neil Spierling <sirvulcan@gmail.com>

	* src/spamserv.c: Crash fix (finally). Been meaning to do this
	for a while now.

2006-06-23  Alex Schumann  <rubin@afternet.org>

	* src/modcmd.help, src/opserv.help, src/helpfile.c, src/helpfile.h,
	src/modcmd.c, src/nickserv.c: Improvements to
	table output and help display. 

	* src/mod-memoserv.c: fix segfault

2006-06-23  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: Backing out the bantype patch because it sucks _bad_.
	fix it and re-apply if you want it..

	* src/chanserv.h: Backing out the bantype patch.

	* src/chanserv.help: Backing out the bantype patch.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Fixed a bug.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Added basic HISTORY command. At the moment
	if the recipient deletes the memo it will not be listed in the
	HISTORY list.

	* src/mod-memoserv.help: HISTORY entry.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Added new flags, see below.

	* src/mod-memoserv.help: Opps forgot the read reciept stuff. Also
	added flags for always ignoring read reciepts and always sending
	read reciepts.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Added CANCEL command for cancelling memos
	that you have sent, aslong as they have not been read yet.

	* src/mod-memoserv.help: CANCEL entry plus tweaked some read
	recipient to read reciept stuff.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Redid the db stuff, it now writes users
	settings and memos to the memoserv database.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Small bug fix.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Added read recipient support via SEND using